changes styles of header-app

--- a/header-app/src/app/app.component.html
+++ b/header-app/src/app/app.component.html
@@ -17,13 +17,13 @@
         </li>
       </ul>
       
-      <div class="navbar-form navbar-left pa-1">
-        <span class="label label-primary">Angular v {{ version.full }}</span>
+      <div class="navbar-form navbar-left" style="padding: 5px;">
+        <span class="label label-primary">Angular v 14.0.0</span>
       </div>
 
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="#" class="mr-2">John Doe</a>
+          <a href="#" style="margin-right: 5rem;">John Doe</a>
         </li>
         <li>
           <a  href="#" class="glyphicon glyphicon-user"></a>
